# sql-odbc

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  THIRD-PARTY  Welcome.txt  aws_sdk_cpp_setup.bat  aws_sdk_cpp_setup.ps1  aws_sdk_cpp_setup.sh  build_win_release32.ps1  build_win_release64.ps1  run_cppcheck.sh  run_test_runner.bat  run_test_runner.sh  win32_build.ps1
.github/: draft-release-notes-config.yml
.github/workflows/: main.yml  release-workflow.yml
dev/tableau_tdc/: example_tdc_file.tdc
docs/dev/: Installation_and_setup.md  Pagination.md  sign_installers.md
docs/test/: query_wizard_connection.md
docs/user/: mac_configure_dsn.md
libraries/rabbit/include/: rabbit.hpp
release-notes/: sql-odbc.release-notes-1.8.0.0.md
src/: CMakeLists.txt
src/DSNInstaller/: CMakeLists.txt  dsn_installer.cpp
src/IntegrationTests/: CMakeLists.txt
src/IntegrationTests/ITODBCAwsAuth/: CMakeLists.txt  test_aws_auth_dsn.reg  test_odbc_aws_auth.cpp
src/IntegrationTests/ITODBCCatalog/: CMakeLists.txt  test_odbc_catalog.cpp
src/IntegrationTests/ITODBCConnection/: CMakeLists.txt  test_dsn.reg  test_odbc.ini  test_odbc_connection.cpp  test_odbcinst.ini
src/IntegrationTests/ITODBCDescriptors/: CMakeLists.txt  test_odbc_descriptors.cpp
src/IntegrationTests/ITODBCExecution/: CMakeLists.txt  test_odbc_execution.cpp
src/IntegrationTests/ITODBCHelper/: CMakeLists.txt  it_odbc_helper.cpp  it_odbc_helper.h
src/IntegrationTests/ITODBCInfo/: CMakeLists.txt  test_odbc_info.cpp
src/IntegrationTests/ITODBCPagination/: CMakeLists.txt  test_odbc_pagination.cpp
src/IntegrationTests/ITODBCResults/: CMakeLists.txt  test_odbc_results.cpp
src/IntegrationTests/ITODBCTableauQueries/: CMakeLists.txt  test_odbc_tableau_queries.cpp
src/ManualTests/: excel_connection.md  microsoft_query_connection.md  odbc_data_source_connection.md  query_wizard_connection.md
src/PerformanceTests/: CMakeLists.txt
src/PerformanceTests/PTODBCExecution/: CMakeLists.txt  performance_odbc_execution.cpp
src/PerformanceTests/PTODBCInfo/: CMakeLists.txt  performance_odbc_info.cpp
src/PerformanceTests/PTODBCResults/: CMakeLists.txt  performance_odbc_results.cpp
src/TaCo/: connection-dialog.tcd  connectionBuilder.js  connectionResolver.tdr  dialect.tdd  manifest.xml
src/TableauConnector/: connectionBuilder.js  manifest.xml
src/TableauConnector/odfe_sql_odbc/: dialect.tdd  manifest.xml  odfe_sql_odbc.taco
src/TableauConnector/odfe_sql_odbc_dev/: manifest.xml
src/TestRunner/: mako_template.html  test_exclude_list.txt  test_runner.py
src/UnitTests/UTAwsSdkCpp/: CMakeLists.txt  test_aws_sdk_cpp.cpp
src/UnitTests/UTConn/: CMakeLists.txt  test_conn.cpp  test_query_execution.cpp
src/UnitTests/UTCriticalSection/: CMakeLists.txt
src/UnitTests/UTHelper/: CMakeLists.txt  unit_test_helper.h
src/aws-sdk-cpp/CI/binary-release-pipeline/: buildspec_github_import.yml
src/aws-sdk-cpp/CI/docker-file/vs2015/: Dockerfile
src/aws-sdk-cpp/CI/docker-file/vs2017/: Dockerfile
src/aws-sdk-cpp/aws-cpp-sdk-core-tests/utils/: FileSystemUtilsTest.cpp
src/elasticenlist/: CMakeLists.txt
src/elasticodbc/: CMakeLists.txt  bind.c  connection.c  convert.c  descriptor.c  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  environ.c  es_api30.c  es_communication.cpp  es_communication.h  es_connection.cpp  es_connection.h  es_driver_connect.cpp  es_helper.cpp  es_helper.h  es_info.cpp  es_odbc.aps  es_odbc.c  es_odbc.h  es_odbc.rc  es_parse_result.cpp  es_parse_result.h  es_statement.cpp  es_statement.h  es_types.c  es_types.h  execute.c  export_def.h  info.c  loadlib.c  misc.c  multibyte.c  mylog.c  mylog.h  odbcapi.c  odbcapi30.c  odbcapi30w.c  (+11 more)
src/gtest/: googletest-download.cmake
src/installer/: CMakeLists.txt  README.txt  patch.xml  postinstall
src/installer/Resources/: Welcome.txt
src/odfesqlodbc/: CMakeLists.txt  connection.c  dlg_specific.h  dlg_wingui.c  drvconn.c  es_communication.cpp  es_communication.h  es_helper.cpp  es_helper.h  es_info.cpp  es_odbc.h  es_odbc.rc  es_parse_result.cpp  es_parse_result.h  es_result_queue.cpp  es_result_queue.h  es_semaphore.cpp  es_statement.cpp  es_statement.h  es_types.c  es_types.h  info.c  qresult.c  resource.h  results.c  setup.c  statement.c
